--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
             </div>
 
-            <div>
                 <ul> <!--usei ul>li*2 e automaticamente criei 2 li's dentro da ul-->
 
                     <li><a href=""><span class="fa fa-home"></span><span>Inicio</span></a></li>
@@ -38,9 +37,54 @@
                     <li><a href=""><span class="fa fa-search"></span><span>Buscar</span></a></li>
 
                 </ul>
-            </div>
 
         </nav>
+
+        <div class="library">
+
+           <div class="library__content">
+
+            <button class="library__button">
+                <span class="fa fas fa-book"></span>
+                <span>Sua biblioteca</span>
+            </button>
+
+            <span class="fa fa-plus"></span>
+
+           </div> 
+
+           <section class="section-playlist">
+
+            <div class="section-playlist__content">
+
+                <span class="text title">Crie sua primeira playlist</span> <!--Posso criar duas classes em uma só tag-->
+                <span class="text subtitle">É facíl vamos te ajudar!</span>
+                <button class="section-playlist__button">
+                    <span>Criar playlist</span>
+                </button>
+            </div>
+
+           </section>
+
+           <div class="cookies">
+
+            <a href="">Cookies</a>
+
+           </div>
+
+           <div class="languages">
+
+            <button class="languages__button">
+
+                <span class="fa fa-globe"></span>
+                <span>Português do Brasil</span>
+
+            </button>
+
+           </div>
+
+        </div>
+
     </div>
 
 </body>
