--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/src/styles/vars.css">
+    <link rel="stylesheet" href="/src/styles/reset.css">
+    <link rel="stylesheet" href="/src/styles/sidebar-footer.css">
+    <link rel="stylesheet" href="/src/styles/main-content.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
@@ -17,15 +19,15 @@
 
 </head>
 <body>
-    
+    <!--Começo Sidebar-->
     <div class="sidebar"> <!--Usei div.(nome da classe) para criar uma div ja com uma classe-->
-
+        
         <nav class="sidebar__navigation"> <!--Tag semantica ja diz qual é a função dela-->
 
             <div class="logo">
 
                 <a href="">
-                    <img src="/icons/logo-spotify.png" alt="Logo logo-spotify">
+                    <img src="/src/icons/logo-spotify.png" alt="Logo logo-spotify">
                 </a>
 
             </div>
@@ -86,6 +88,48 @@
         </div>
 
     </div>
+    <!--Fim Sidebar-->
 
+
+    <main>
+
+        <div class="main-container">
+
+            <nav class="header__navigation">
+                <div class="navigation">
+                    <button class="arrow-left"><img src="/src/icons/small-left.png" alt="Seta Esquerda"></button>
+                    <button class="arrow-right"><img src="/src/icons/small-right.png" alt="Seta direita"></button>
+
+                    <div class="header__search">
+                        <img src="/src/icons/search.png" alt="">
+                        <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?">
+                    </div>
+
+                    <div class="header__login">
+                        <button class="subscribe">Inscreva-se</button>
+                        <button class="login">Entrar</button>
+                    </div>
+
+                </div>
+            </nav>
+
+        </div>
+
+    </main>
+
+    <!--Começo Footer-->
+    <footer class="disclaimer-premium">
+        <div class="text">
+            <p class="disclaimer-premium__title">Testar o Premium de graça</p>
+            <p class="disclaimer-premium__subtitle">
+                Inscreva-se para curtir música ilimitada e podcasts só com alguns
+                anúncios. Não precisa de cartão de crédito.
+            </p>
+        </div>
+        <div class="button">
+            <button type="button">Inscreva-se grátis</button>
+        </div>
+    </footer>
+    <!--Fim Footer-->
 </body>
 </html>
